Fixed task overflow + scrollbar color

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary: rgba(0, 0, 0, 0);
-  --secondary: rgb(207, 26, 138);
+  --secondary: rgb(21, 96, 167);
   /* Your default theme */
   --background: white;
   --foreground: black;
